# HFT-Matching-Engine

./: .gitignore  CMakeLists.txt  README.md
include/: LatencyHistogram.h  MemoryPool.h  Order.h  OrderBook.h  SpscRingBuffer.h
scripts/: data_generate.py  generate_and_benchmark.py  parse_crypto.py
src/: OrderBook.cpp  main.cpp
tests/: test_orderbook.cpp
